[gd_scene load_steps=22 format=2]

[ext_resource path="res://laku_smash/lakupeli_pelitausta2.png" type="Texture" id=1]
[ext_resource path="res://scenes/grid.tscn" type="PackedScene" id=2]
[ext_resource path="res://laku_smash/pieces/lakuspiral.tscn" type="PackedScene" id=3]
[ext_resource path="res://laku_smash/pieces/sydan.tscn" type="PackedScene" id=4]
[ext_resource path="res://laku_smash/pieces/laku.tscn" type="PackedScene" id=5]
[ext_resource path="res://laku_smash/pieces/lakuguy.tscn" type="PackedScene" id=6]
[ext_resource path="res://laku_smash/pieces/lakusydan.tscn" type="PackedScene" id=7]
[ext_resource path="res://laku_smash/pieces/lakupiippu.tscn" type="PackedScene" id=8]
[ext_resource path="res://art/screen.png" type="Texture" id=9]
[ext_resource path="res://ui/basic_theme.tres" type="Theme" id=10]
[ext_resource path="res://laku_smash/laku_score_keeper.gd" type="Script" id=11]
[ext_resource path="res://scripts/move_keeper.gd" type="Script" id=12]
[ext_resource path="res://laku_smash/laku_smash.gd" type="Script" id=13]
[ext_resource path="res://laku_smash/laku_curtains.tscn" type="PackedScene" id=14]
[ext_resource path="res://laku_smash/lakupeli_button.png" type="Texture" id=15]
[ext_resource path="res://laku_smash/laku_smash_theme.tres" type="Theme" id=16]
[ext_resource path="res://laku_smash/larger_laku_smash_theme.tres" type="Theme" id=17]
[ext_resource path="res://art/bg_shadow.png" type="Texture" id=18]
[ext_resource path="res://laku_smash/hi_score.gd" type="Script" id=19]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("text:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "text_appears"
tracks/0/type = "value"
tracks/0/path = NodePath("text:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 2.82843, 1.46408, 0.329877 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("play:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("play:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8, 1 ),
"transitions": PoolRealArray( 1, 1.93187 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hiscore_text:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1.86607, 2.07053, 0.307786 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="laku_smash" type="Node2D"]
script = ExtResource( 13 )
possible_pieces = [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 7 ) ]
sydan_piece = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 576.0
margin_bottom = 1024.0
texture = ExtResource( 1 )
expand = true

[node name="BackgroundColor" type="ColorRect" parent="."]
visible = false
margin_right = 577.0
margin_bottom = 1027.0
theme = ExtResource( 10 )
color = Color( 0.854902, 0.207843, 0.129412, 1 )

[node name="bg_shadow" type="TextureRect" parent="BackgroundColor"]
modulate = Color( 1, 1, 1, 0.705882 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 8, 8 )
mouse_filter = 2
texture = ExtResource( 18 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 576.0
margin_bottom = 1027.0
theme = ExtResource( 10 )

[node name="Header" type="ColorRect" parent="Control"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1024.0
margin_bottom = -847.0
color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="MarginContainer2" type="MarginContainer" parent="Control"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 424.0
margin_top = -1007.0
margin_right = -24.0
margin_bottom = -889.0

[node name="score_header" type="RichTextLabel" parent="Control/MarginContainer2"]
margin_right = 128.0
margin_bottom = 40.0
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "[center]PISTEET[/center]"
text = "PISTEET"
fit_content_height = true

[node name="Screen2" type="Sprite" parent="Control"]
visible = false
modulate = Color( 0.137255, 0.137255, 0.137255, 1 )
position = Vector2( 483, 119 )
rotation = 3.14159
scale = Vector2( 1.25, -1 )
texture = ExtResource( 9 )

[node name="MarginContainer3" type="MarginContainer" parent="Control"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_top = -1008.0
margin_right = -422.0
margin_bottom = -889.0

[node name="timer_header" type="RichTextLabel" parent="Control/MarginContainer3"]
margin_right = 131.0
margin_bottom = 40.0
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "[center]SIIRROT[/center]"
text = "SIIRROT"
fit_content_height = true

[node name="Screen3" type="Sprite" parent="Control"]
visible = false
modulate = Color( 0.137255, 0.137255, 0.137255, 1 )
position = Vector2( 97, 119 )
rotation = 3.14159
scale = Vector2( 1.25, 1 )
texture = ExtResource( 9 )

[node name="timer_text" type="RichTextLabel" parent="Control"]
margin_left = 44.0
margin_top = 185.0
margin_right = 181.0
margin_bottom = 232.0
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]∞[/center]"
text = "∞"
fit_content_height = true

[node name="countdown_timer" type="Timer" parent="Control/timer_text"]
one_shot = true

[node name="score" type="RichTextLabel" parent="Control"]
margin_left = 396.0
margin_top = 185.0
margin_right = 533.0
margin_bottom = 232.0
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]10000[/center]"
text = "10000"
fit_content_height = true

[node name="end_stuff" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="play" type="Button" parent="Control/end_stuff"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -83.0
margin_top = -450.0
margin_right = 83.0
margin_bottom = -368.0
rect_pivot_offset = Vector2( 83, 41 )
theme = ExtResource( 16 )
text = "Uudelleen!"
icon = ExtResource( 15 )
icon_align = 1
expand_icon = true

[node name="visible_delay" type="Timer" parent="Control/end_stuff/play"]
wait_time = 0.5
one_shot = true

[node name="text" type="Control" parent="Control/end_stuff"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -191.5
margin_right = 254.0
margin_bottom = 47.5
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 255, 119 )

[node name="end_text" type="Label" parent="Control/end_stuff/text"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.5
margin_top = -120.5
margin_right = 210.5
margin_bottom = 120.5
theme = ExtResource( 17 )
text = "Siirrot loppuivat!
Onnistuit saamaan

Hienoa!"
align = 1

[node name="end_score" type="Label" parent="Control/end_stuff/text"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -258.5
margin_top = 2.5
margin_right = 258.5
margin_bottom = 83.5
theme = ExtResource( 17 )
text = "10000 pistettä"
align = 1

[node name="hiscore_text" type="Control" parent="Control/end_stuff"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = 151.5
margin_right = 254.0
margin_bottom = 391.5
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 255, 120 )

[node name="hiscore_text" type="Label" parent="Control/end_stuff/hiscore_text"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.5
margin_top = -97.0
margin_right = 210.5
margin_bottom = -39.0
theme = ExtResource( 17 )
text = "Paras tuloksesi on:"
align = 1

[node name="hiscore_score" type="Label" parent="Control/end_stuff/hiscore_text"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -258.5
margin_top = -40.5
margin_right = 258.5
margin_bottom = 40.5
theme = ExtResource( 17 )
text = "10000 pistettä"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/end_stuff"]
anims/RESET = SubResource( 1 )
anims/text_appears = SubResource( 2 )

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="grid" parent="." instance=ExtResource( 2 )]
can_play = true
y_start = 864
possible_pieces = [  ]

[node name="score_keeper" type="Node" parent="."]
script = ExtResource( 11 )

[node name="move_keeper" type="Node" parent="."]
script = ExtResource( 12 )

[node name="laku_curtains" parent="." instance=ExtResource( 14 )]
margin_right = 576.0
margin_bottom = 1024.0

[node name="end_delay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="hi_score" type="Node" parent="."]
script = ExtResource( 19 )

[connection signal="timeout" from="Control/timer_text/countdown_timer" to="Control/timer_text" method="_on_countdown_timer_timeout"]
[connection signal="pressed" from="Control/end_stuff/play" to="." method="_on_play_pressed"]
[connection signal="match_made" from="grid" to="score_keeper" method="_on_grid_match_made"]
[connection signal="swap_succesful" from="grid" to="move_keeper" method="_on_grid_swap_succesful"]
[connection signal="moves_deplenished" from="move_keeper" to="." method="_on_move_keeper_moves_deplenished"]
[connection signal="timeout" from="end_delay" to="." method="_on_end_delay_timeout"]

[editable path="grid"]
